Label actions, graph + fix its spacing

--- a/styles/Graph.module.css
+++ b/styles/Graph.module.css
@@ -1,7 +1,7 @@
 .graph {
   line-height: 1;
 
-  padding: 0.5em 0.5ch;
+  padding: 0.5em 0 0 0;
 
   display: grid;
   grid-template-columns: min-content 1fr;
