--- a/styles/Rules.module.css
+++ b/styles/Rules.module.css
@@ -38,7 +38,7 @@
 }
 
 .rules h2 {
-  margin: 0 0 var(--default-font-size);
+  margin: 0 0 calc(var(--default-font-size) / 2);
 }
 
 .actions th {
